--- a/catalog.html
+++ b/catalog.html
@@ -12,9 +12,9 @@
         <nav class="main-navigation">
 
             <a href="" class="main-header-logo">
-                <img src="#" alt="">
+                <img src="img/nerds-logo.svg" alt="">
             </a>
-        
+
             <ul class="site-navigation">
                 <li><a href="index.html">Студия</a></li>
                 <li><a href="#">Клиенты</a></li>
@@ -63,7 +63,7 @@
                             <span class="checkbox-indicator visually-hidden"></span>
                             Резиновая
                         </label>
-                    </p>                
+                    </p>
 
             </fieldset>
 
@@ -125,7 +125,7 @@
             </div>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-sedona.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>Sedona</h3>
                     <p>Информационный сайт для туристов</p>
@@ -134,7 +134,7 @@
             </article>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-pink.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>Pink app</h3>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
@@ -143,7 +143,7 @@
             </article>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-barbershop.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>Barbershop</h3>
                     <p>Сайт салона красоты. Для мужчин, да.</p>
@@ -152,7 +152,7 @@
             </article>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-mishka.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>Mishka</h3>
                     <p>Интернет-магазин вязаных игрушек</p>
@@ -161,7 +161,7 @@
             </article>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-aplus.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>A plus</h3>
                     <p>Лендинг курсов повышения квалификации</p>
@@ -170,7 +170,7 @@
             </article>
 
             <article class="portfolio-item">
-                <img src="#" alt="">
+                <img src="img/img-kvast.jpg" alt="">
                 <div class="portfolio-show">
                     <h3>Кваст</h3>
                     <p>Промо-сайт производителя крафтового кваса</p>
@@ -235,8 +235,8 @@
                 <textarea name="" id="" cols="30" rows="10" placeholder="В свободной форме"></textarea>
             </label>
             <button type="submit">Отправить</button>
-        </for>
+        </form>
         <button class="modal-close" type="button">Закрыть</button>
-    </section>    
+    </section>
 </body>
 </html>
