--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
         <nav class="main-navigation">
 
-            <a href="" class="main-header-logo">
-                <img src="#" alt="">
+            <a href="#" class="main-header-logo">
+                <img src="img/nerds-logo.svg" alt="">
             </a>
-        
+
             <ul class="site-navigation">
                 <li><a>Студия</a></li>
                 <li><a href="#">Клиенты</a></li>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="about-statistics">
-                <img src="#" alt="" class="about-logo">
+                <img src="img/nerds-illustration.jpg" alt="" class="about-logo">
                 <p class="about-caption"><b>С 2004 года любим точность во всём:</b></p>
                 <table class="about-table">
                     <tr>
@@ -94,15 +94,15 @@
         <section class="partners">
             <h2 class="visually-hidden">Наши партнёры</h2>
             <ul class="partners-list">
-                <li class="partners-item"><img src="#" alt=""></li>
-                <li class="partners-item"><img src="#" alt=""></li>
-                <li class="partners-item"><img src="#" alt=""></li>
-                <li class="partners-item"><img src="#" alt=""></li>
+                <li class="partners-item"><img src="img/logo-1.png" alt=""></li>
+                <li class="partners-item"><img src="img/logo-2.png" alt=""></li>
+                <li class="partners-item"><img src="img/logo-3.png" alt=""></li>
+                <li class="partners-item"><img src="img/logo-4.png" alt=""></li>
             </ul>
         </section>
-   
+
     </main>
-    
+
     <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <div class="map-contacts">
@@ -144,7 +144,7 @@
                 <textarea name="" id="" cols="30" rows="10" placeholder="В свободной форме"></textarea>
             </label>
             <button class="btn" type="submit">Отправить</button>
-        </for>
+        </form>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
 </body>
