--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="inner-page">
     <header class="main-header">
 
         <nav class="main-navigation">
